# Blunomy_task

./: .gitignore  README.md  pyproject.toml
src/lidar_catenary/: __init__.py  catenary.py  cli.py  clustering.py  geometry.py  io.py  pipeline.py  plot_clusters.py  preprocess.py
tests/: test_catenary.py  test_geometry.py  test_io.py  test_pipeline.py  test_preprocess.py
